vytvorené základné sekcie html s classmy

--- a/index.html
+++ b/index.html
@@ -10,6 +10,21 @@
     <title>Mandatory project (1/3) ENGETO frontend academy</title>
 </head>
 <body>
-    
+
+    <header class="header">
+        <nav class="nav"></nav>
+        <section class="hero"></section>
+    </header>
+
+    <main class="main">
+        <section class="about-us"></section>
+        <section class="what-we-do"></section>
+        <section class="out-trips"></section>
+        <section class="contacts"></section>
+        <section class="reviews"></section>
+        <section class="gallery"></section>
+    </main>
+
+    <footer class="footer"></footer> 
 </body>
 </html>
