vytvorené html komenty na zákl. sekcie atd

--- a/index.html
+++ b/index.html
@@ -11,20 +11,40 @@
 </head>
 <body>
 
+    <!--....................HEADER.................-->
     <header class="header">
+
+        <!--..................nav..................-->
         <nav class="nav"></nav>
+
+        <!--..................hero.................-->
         <section class="hero"></section>
+
     </header>
 
+    <!--....................MAIN...................-->
     <main class="main">
+
+        <!--...............about-us................-->
         <section class="about-us"></section>
+
+        <!--...............what-we-do..............-->
         <section class="what-we-do"></section>
+
+        <!--...............our-trips...............-->
         <section class="out-trips"></section>
+
+        <!--...............contacts................-->
         <section class="contacts"></section>
+
+        <!--...............reviews................-->
         <section class="reviews"></section>
+
+        <!--...............gallery................-->
         <section class="gallery"></section>
     </main>
 
+    <!--....................FOOTER.................-->
     <footer class="footer"></footer> 
 </body>
 </html>
