všetky <li> v <nav> zabalené do <a>

--- a/index.html
+++ b/index.html
@@ -19,11 +19,21 @@
         <nav class="nav">
 
             <ul class="nav-container">
-                <li class="nav-about-us"></li>
-                <li class="nav-what-we-do"></li>
-                <li class="nav-our-trips"></li>
-                <li class="nav-contacts"></li>
-                <li class="nav-reviews"></li>
+                <a href="#">
+                    <li class="nav-about-us"></li>
+                </a>
+                <a href="#">
+                    <li class="nav-what-we-do"></li>
+                </a> 
+                <a href="#">
+                    <li class="nav-our-trips"></li>
+                </a>
+                <a href="#">
+                    <li class="nav-contacts"></li>
+                </a>
+                <a href="#">
+                    <li class="nav-reviews"></li>
+                </a>
             </ul>
 
         </nav>
