css komenty + html úprava headings na malé písmená

--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
 
             <ul class="nav-container">
                 <a href="#">
-                    <li class="nav-about-us"></li>
+                    <li class="nav-about-us">about us</li>
                 </a>
                 <a href="#">
-                    <li class="nav-what-we-do"></li>
+                    <li class="nav-what-we-do">what we do</li>
                 </a> 
                 <a href="#">
-                    <li class="nav-our-trips"></li>
+                    <li class="nav-our-trips">our trips</li>
                 </a>
                 <a href="#">
-                    <li class="nav-contacts"></li>
+                    <li class="nav-contacts">where to go</li>
                 </a>
                 <a href="#">
-                    <li class="nav-reviews"></li>
+                    <li class="nav-reviews">reviews</li>
                 </a>
             </ul>
 
@@ -46,7 +46,7 @@
             </div>
 
             <h1>
-                Your travel assistant
+                your travel assistant
             </h1>
 
         </section>
@@ -64,7 +64,7 @@
                 <div class="about-us-text">
 
                     <h2>
-                        About us
+                        about us
                     </h2>
 
                     <p>
@@ -92,7 +92,7 @@
                 <div class="what-we-do-text">
 
                     <h2>
-                        What we do
+                        what we do
                     </h2>
 
                     <p>
@@ -124,7 +124,7 @@
             <div class="our-trips-text">
 
                 <h2>
-                    Our trips
+                    our trips
                 </h2>
 
             </div>
@@ -157,7 +157,7 @@
             <div class="contacts-text">
 
                 <h2>
-                    Where do you want to go?
+                    where do you want to go?
                 </h2>
 
                 <p>
@@ -170,7 +170,7 @@
 
             </div>
 
-            <div class="contacts-button"></div>
+            <div class="contacts-button">contact us</div>
 
         </section>
 
@@ -180,7 +180,7 @@
             <div class="review-main-text">
 
                 <h2>
-                    Reviews
+                    reviews
                 </h2>
 
                 <p>
@@ -198,7 +198,7 @@
                     </p>
 
                     <h3>
-                        Bertie Norton
+                        bertie norton
                     </h3>
 
                 </div>
@@ -220,7 +220,7 @@
                     </p>
 
                     <h3>
-                        Frank KinneyFooter
+                        frank kinney
                     </h3>
 
                 </div>
@@ -269,11 +269,11 @@
     <footer class="footer">
 
         <h3>
-            Contact
+            contact
         </h3>
 
         <p>
-            © 2022 - Your Travel Assistant. All Rights Reserved.
+            © 2022 - your travel assistant. all rights reserved.
         </p>
 
     </footer> 
