prvé css basics + shared

--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
 
             <ul class="nav-container">
                 <a href="#">
-                    <li class="nav-about-us">about us</li>
+                    <li class="nav-about-us capitalize">about us</li>
                 </a>
                 <a href="#">
-                    <li class="nav-what-we-do">what we do</li>
+                    <li class="nav-what-we-do capitalize">what we do</li>
                 </a> 
                 <a href="#">
-                    <li class="nav-our-trips">our trips</li>
+                    <li class="nav-our-trips capitalize">our trips</li>
                 </a>
                 <a href="#">
                     <li class="nav-contacts">where to go</li>
                 </a>
                 <a href="#">
-                    <li class="nav-reviews">reviews</li>
+                    <li class="nav-reviews capitalize">reviews</li>
                 </a>
             </ul>
 
@@ -45,7 +45,7 @@
 
             </div>
 
-            <h1>
+            <h1 class="capitalize">
                 your travel assistant
             </h1>
 
@@ -63,7 +63,7 @@
 
                 <div class="about-us-text">
 
-                    <h2>
+                    <h2 class="capitalize">
                         about us
                     </h2>
 
@@ -91,7 +91,7 @@
 
                 <div class="what-we-do-text">
 
-                    <h2>
+                    <h2 class="capitalize">
                         what we do
                     </h2>
 
@@ -123,7 +123,7 @@
 
             <div class="our-trips-text">
 
-                <h2>
+                <h2 class="capitalize">
                     our trips
                 </h2>
 
@@ -157,7 +157,7 @@
             <div class="contacts-text">
 
                 <h2>
-                    where do you want to go?
+                    <span class="capitalize">where</span> do you want to go?
                 </h2>
 
                 <p>
@@ -170,7 +170,7 @@
 
             </div>
 
-            <div class="contacts-button">contact us</div>
+            <div class="contacts-button uppercase">contact us</div>
 
         </section>
 
@@ -179,7 +179,7 @@
 
             <div class="review-main-text">
 
-                <h2>
+                <h2 class="capitalize">
                     reviews
                 </h2>
 
@@ -197,7 +197,7 @@
                         She has booked two major European trips for us in the past year and every aspect has met, and in most cases exceeded, our expectations. Best prices, best hotels, best itineraries, and best cruises, she does it all. But the most important thing is she remembers the little things that we would do if we were making the plans ourselves.
                     </p>
 
-                    <h3>
+                    <h3 class="capitalize">
                         bertie norton
                     </h3>
 
@@ -219,7 +219,7 @@
                         Leigh McAdam has been making my travel arrangements for about 20 years and there is no one else I would trust to arrange my trips and tours. I've also had great  fun on a few of the group trips she has arranged - Peru & Machu Picchu and a 10-day cruise out of Venice and diving. It's always an eclectic group of well traveled, interesting people. 
                     </p>
 
-                    <h3>
+                    <h3 class="capitalize">
                         frank kinney
                     </h3>
 
@@ -268,12 +268,15 @@
     <!--....................FOOTER.................-->
     <footer class="footer">
 
-        <h3>
+        <h3 class="capitalize">
             contact
         </h3>
 
         <p>
-            © 2022 - your travel assistant. all rights reserved.
+            © 2022 - 
+            <span class="capitalize">
+            your travel assistant. all rights reserved.
+            </span> 
         </p>
 
     </footer> 
