header komplet hotový

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <li class="nav-our-trips capitalize">our trips</li>
                 </a>
                 <a href="#">
-                    <li class="nav-contacts">where to go</li>
+                    <li class="nav-contacts capitalize">where to go</li>
                 </a>
                 <a href="#">
                     <li class="nav-reviews capitalize">reviews</li>
@@ -280,5 +280,7 @@
         </p>
 
     </footer> 
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis eligendi magnam asperiores dolor esse beatae aspernatur magni a quibusdam excepturi aut aliquam deserunt porro ex ducimus alias quia, quos debitis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis eligendi magnam asperiores dolor esse beatae aspernatur magni a quibusdam excepturi aut aliquam deserunt porro ex ducimus alias quia, quos debitis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis eligendi magnam asperiores dolor esse beatae aspernatur magni a quibusdam excepturi aut aliquam deserunt porro ex ducimus alias quia, quos debitis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis eligendi magnam asperiores dolor esse beatae aspernatur magni a quibusdam excepturi aut aliquam deserunt porro ex ducimus alias quia, quos debitis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis eligendi magnam asperiores dolor esse beatae aspernatur magni a quibusdam excepturi aut aliquam deserunt porro ex ducimus alias quia, quos debitis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis eligendi magnam asperiores dolor esse beatae aspernatur magni a quibusdam excepturi aut aliquam deserunt porro ex ducimus alias quia, quos debitis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis eligendi magnam asperiores dolor esse beatae aspernatur magni a quibusdam excepturi aut aliquam deserunt porro ex ducimus alias quia, quos debitis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis eligendi magnam asperiores dolor esse beatae aspernatur magni a quibusdam excepturi aut aliquam deserunt porro ex ducimus alias quia, quos debitis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis eligendi magnam asperiores dolor esse beatae aspernatur magni a quibusdam excepturi aut aliquam deserunt porro ex ducimus alias quia, quos debitis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis eligendi magnam asperiores dolor esse beatae aspernatur magni a quibusdam excepturi aut aliquam deserunt porro ex ducimus alias quia, quos debitis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis eligendi magnam asperiores dolor esse beatae aspernatur magni a quibusdam excepturi aut aliquam deserunt porro ex ducimus alias quia, quos debitis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis eligendi magnam asperiores dolor esse beatae aspernatur magni a quibusdam excepturi aut aliquam deserunt porro ex ducimus alias quia, quos debitis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis eligendi magnam asperiores dolor esse beatae aspernatur magni a quibusdam excepturi aut aliquam deserunt porro ex ducimus alias quia, quos debitis?</p>
 </body>
 </html>
