úprava classov header ešte

--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
 
             <ul class="nav-container">
                 <a href="#">
-                    <li class="nav-about-us capitalize">about us</li>
+                    <li class="capitalize">about us</li>
                 </a>
                 <a href="#">
-                    <li class="nav-what-we-do capitalize">what we do</li>
+                    <li class="capitalize">what we do</li>
                 </a> 
                 <a href="#">
-                    <li class="nav-our-trips capitalize">our trips</li>
+                    <li class="capitalize">our trips</li>
                 </a>
                 <a href="#">
-                    <li class="nav-contacts capitalize">where to go</li>
+                    <li class="capitalize">where to go</li>
                 </a>
                 <a href="#">
-                    <li class="nav-reviews capitalize">reviews</li>
+                    <li class="capitalize">reviews</li>
                 </a>
             </ul>
 
