hero section hotová snáď

--- a/index.html
+++ b/index.html
@@ -42,12 +42,17 @@
         <section class="hero">
 
             <div class="hero-image">
-
             </div>
 
-            <h1 class="capitalize">
-                your travel assistant
-            </h1>
+            <div class="hero-text-container">
+
+                <h1 class="hero-text capitalize">
+                    <span>your</span>
+                    <span> travel</span>
+                    <span> assistant</span>   
+                </h1>
+                
+            </div>
 
         </section>
 
@@ -281,6 +286,5 @@
 
     </footer> 
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis eligendi magnam asperiores dolor esse beatae aspernatur magni a quibusdam excepturi aut aliquam deserunt porro ex ducimus alias quia, quos debitis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis eligendi magnam asperiores dolor esse beatae aspernatur magni a quibusdam excepturi aut aliquam deserunt porro ex ducimus alias quia, quos debitis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis eligendi magnam asperiores dolor esse beatae aspernatur magni a quibusdam excepturi aut aliquam deserunt porro ex ducimus alias quia, quos debitis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis eligendi magnam asperiores dolor esse beatae aspernatur magni a quibusdam excepturi aut aliquam deserunt porro ex ducimus alias quia, quos debitis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis eligendi magnam asperiores dolor esse beatae aspernatur magni a quibusdam excepturi aut aliquam deserunt porro ex ducimus alias quia, quos debitis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis eligendi magnam asperiores dolor esse beatae aspernatur magni a quibusdam excepturi aut aliquam deserunt porro ex ducimus alias quia, quos debitis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis eligendi magnam asperiores dolor esse beatae aspernatur magni a quibusdam excepturi aut aliquam deserunt porro ex ducimus alias quia, quos debitis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis eligendi magnam asperiores dolor esse beatae aspernatur magni a quibusdam excepturi aut aliquam deserunt porro ex ducimus alias quia, quos debitis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis eligendi magnam asperiores dolor esse beatae aspernatur magni a quibusdam excepturi aut aliquam deserunt porro ex ducimus alias quia, quos debitis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis eligendi magnam asperiores dolor esse beatae aspernatur magni a quibusdam excepturi aut aliquam deserunt porro ex ducimus alias quia, quos debitis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis eligendi magnam asperiores dolor esse beatae aspernatur magni a quibusdam excepturi aut aliquam deserunt porro ex ducimus alias quia, quos debitis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis eligendi magnam asperiores dolor esse beatae aspernatur magni a quibusdam excepturi aut aliquam deserunt porro ex ducimus alias quia, quos debitis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis eligendi magnam asperiores dolor esse beatae aspernatur magni a quibusdam excepturi aut aliquam deserunt porro ex ducimus alias quia, quos debitis?</p>
 </body>
 </html>
