--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Mandatory project (1/3) ENGETO frontend academy</title>
     <link rel="stylesheet" href="/css/style.css">
 </head>
-<body>
+<body class="body">
 
     <!--....................HEADER.................-->
     <header class="header">
@@ -105,13 +105,45 @@
 
                 <div class="what-we-do-icons">
 
-                    <div class="what-we-do-icon1"></div>
+                    <div class="what-we-do-icon-container">
 
-                    <div class="what-we-do-icon2"></div>
+                        <div class="what-we-do-icon1"></div>
 
-                    <div class="what-we-do-icon3"></div>
+                        <h3 class="capitalize">
+                            hiking
+                        </h3>
 
-                    <div class="what-we-do-icon4"></div>
+                    </div>
+
+                    <div class="what-we-do-icon-container">
+
+                        <div class="what-we-do-icon2"></div>
+
+                        <h3 class="capitalize">
+                            cycling
+                        </h3>
+
+                    </div>
+
+                    <div class="what-we-do-icon-container">
+
+                        <div class="what-we-do-icon3"></div>
+
+                        <h3 class="capitalize">
+                            surfing
+                        </h3>
+
+                    </div>
+
+                    <div class="what-we-do-icon-container">
+
+                        <div class="what-we-do-icon4"></div>
+
+                        <h3 class="capitalize">
+                            car trips
+                        </h3>
+
+                    </div>
 
                 </div>
             
