sekcia footer snáď hotovo + dorábam chyby všade

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <title>Mandatory project (1/3) ENGETO frontend academy</title>
     <link rel="stylesheet" href="/css/style.css">
 </head>
-<body class="body">
+<body id="body">
 
     <!--....................HEADER.................-->
-    <header class="header">
+    <header>
 
         <!--..................nav..................-->
         <nav class="nav">
@@ -90,7 +90,7 @@
             
             <div class="about-us-img-container">
 
-                <div class="about-us-img">
+                <div class="about-us-img border-radius">
                 </div>
             
             </div> 
@@ -362,7 +362,7 @@
     <footer class="footer">
 
         <h3 class="capitalize">
-            contact
+            <a href="#">contact</a>
         </h3>
 
         <p>
