dolaďujem prehľadnosť - komenty a readme

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 </head>
 <body id="body">
 
-    <!--....................HEADER.................-->
+    <!--.............................HEADER...............................-->
     <header>
 
-        <!--..................nav..................-->
+        <!--..............................nav...............................-->
         <nav class="nav">
 
             <ul class="nav-container">
@@ -49,7 +49,7 @@
 
         </nav>
 
-        <!--..................hero.................-->
+        <!--............................hero...........................-->
         <section class="hero">
 
             <div class="hero-image">
@@ -69,10 +69,10 @@
 
     </header>
 
-    <!--....................MAIN...................-->
+    <!--..............................MAIN............................-->
     <main class="main">
 
-        <!--...............about-us................-->
+        <!--........................about-us..........................-->
         <section class="about-us">
 
             <div class="about-us-text">
@@ -97,7 +97,7 @@
 
         </section>
 
-        <!--...............what-we-do..............-->
+        <!--.........................what-we-do.......................-->
         <section class="what-we-do">
 
             <div class="what-we-do-container">
@@ -163,7 +163,7 @@
 
         </section>
 
-        <!--...............our-trips...............-->
+        <!--......................our-trips..........................-->
         <section class="our-trips">
 
             <div class="our-trips-container">
@@ -224,7 +224,7 @@
 
         </section>
 
-        <!--...............contacts................-->
+        <!--........................contacts.........................-->
         <section class="contacts">
 
             <div class="contacts-container">
@@ -263,7 +263,7 @@
 
         </section>
 
-        <!--...............reviews................-->
+        <!--............................reviews...........................-->
         <section class="reviews">
 
             <div class="review-intro">
@@ -328,7 +328,7 @@
 
         </section>
 
-        <!--...............gallery................-->
+        <!--...........................gallery...........................-->
         <section class="gallery">
 
             <div class="gallery-photo-container">
@@ -358,7 +358,7 @@
         </section>
     </main>
 
-    <!--....................FOOTER.................-->
+    <!--....................................FOOTER............................-->
     <footer class="footer">
 
         <h3 class="capitalize">
